tester/testsuite/bad/bad049.jl
int main() { 
   int a^9;
   return 1;
}
